--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "serve": "gatsby serve",
     "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Note: no test specified\" && exit 0"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
